--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -6,7 +6,7 @@ jobs:
   appimage-builder:
     name: Linux AppImage Build
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
       - uses: actions/checkout@v3
