FIX: [STUDIO-1908] add printer cert and version compatible
Change-Id: I6aef8c1169952a0b541516ab3a0d7de2d3e213b3
(cherry picked from commit b0bbb571c7c54e81cd52262d334eb1463c3550e7)

--- a/resources/config.json
+++ b/resources/config.json
@@ -19,8 +19,7 @@
                 "FUNC_AUTO_SWITCH_FILAMENT": false,
                 "FUNC_CHAMBER_FAN" : false,
                 "FUNC_EXTRUSION_CALI": true,
-                "FUNC_PRINT_ALL" : false,
-                "FUNC_SEND_TO_SDCARD": false
+                "FUNC_PRINT_ALL" : false
             },
             "camera_resolution":["720p"],
             "bed_temperature_limit": 100,
