--- a/.github/workflows/build_mac_arm64.yml
+++ b/.github/workflows/build_mac_arm64.yml
@@ -33,11 +33,11 @@ jobs:
       - name: Download and extract deps
         working-directory: ${{ github.workspace }}
         run: |
-          curl -LJO https://github.com/SoftFever/FileSharing/releases/download/2/BambuStudio_dep_arm64.tar.gz
-          tar -zxvf BambuStudio_dep_arm64.tar.gz -C ${{ github.workspace }}/deps/build
+          curl -LJO https://github.com/SoftFever/FileSharing/releases/download/2/BambuStudio_dep_arm64_21-01-2023.tar.gz
+          tar -zxvf BambuStudio_dep_arm64_21-01-2023.tar.gz -C ${{ github.workspace }}/deps/build
           chown -R $(id -u):$(id -g) ${{ github.workspace }}/deps/build/BambuStudio_dep
           ls -l ${{ github.workspace }}/deps/build/BambuStudio_dep
-          rm BambuStudio_dep_arm64.tar.gz
+          rm BambuStudio_dep_arm64_21-01-2023.tar.gz
 
 
       - name: Build studio
