--- a/.github/workflows/build_win.yml
+++ b/.github/workflows/build_win.yml
@@ -15,32 +15,32 @@ jobs:
           choco install strawberryperl
       - run: mkdir ${{ github.workspace }}/deps/build
       - run: mkdir ${{ github.workspace }}/deps/build/BambuStudio_dep
-      # - name: download deps
-      #   shell: powershell
-      #   run: '(new-object System.Net.WebClient).DownloadFile("https://github.com/SoftFever/FileSharing/releases/download/2/BambuStudio_dep.zip", "$env:temp\BambuStudio_dep.zip")'
-      # - name: extract deps
-      #   working-directory: ${{ github.workspace }}/deps/build
-      #   shell: cmd
-      #   run: '"C:/Program Files/7-Zip/7z.exe" x %temp%\BambuStudio_dep.zip'
+      - name: download deps
+        shell: powershell
+        run: '(new-object System.Net.WebClient).DownloadFile("https://github.com/SoftFever/FileSharing/releases/download/2/BambuStudio_dep_21Jan2023.zip", "$env:temp\BambuStudio_dep_21Jan2023.zip")'
+      - name: extract deps
+        working-directory: ${{ github.workspace }}/deps/build
+        shell: cmd
+        run: '"C:/Program Files/7-Zip/7z.exe" x %temp%\BambuStudio_dep_21Jan2023.zip'
 
-      # - run: dir "${{ github.workspace }}\deps\build\BambuStudio_dep"
+      - run: dir "${{ github.workspace }}\deps\build\BambuStudio_dep"
       
-      - name: build deps
-        id: cache_deps
-        uses: actions/cache@v3
-        env:
-          cache-name: ${{ runner.os }}-cache-bambustudio_deps
-        with:
-          path: ${{ github.workspace }}/deps/build/BambuStudio_dep
-          key: ${{ runner.os }}-build-${{ env.cache-name }}
+      # - name: build deps
+      #   id: cache_deps
+      #   uses: actions/cache@v3
+      #   env:
+      #     cache-name: ${{ runner.os }}-cache-bambustudio_deps
+      #   with:
+      #     path: ${{ github.workspace }}/deps/build/BambuStudio_dep
+      #     key: ${{ runner.os }}-build-${{ env.cache-name }}
 
-      - if: ${{ steps.cache_deps.outputs.cache-hit != 'true' }}
-        name: build deps
-        working-directory: ${{ github.workspace }}
-        continue-on-error: true
-        run: .\build_release.bat deps
+      # - if: ${{ steps.cache_deps.outputs.cache-hit != 'true' }}
+      #   name: build deps
+      #   working-directory: ${{ github.workspace }}
+      #   continue-on-error: true
+      #   run: .\build_release.bat deps
    
-      - run:  Get-ChildItem ${{ github.workspace }}/deps/build/ -Exclude BambuStudio_dep | Remove-Item -Recurse -Force
+      # - run:  Get-ChildItem ${{ github.workspace }}/deps/build/ -Exclude BambuStudio_dep | Remove-Item -Recurse -Force
 
       - name: Build studio
         working-directory: ${{ github.workspace }}
