NEW: support to config ftp_folder for printer [P1P]
Change-Id: I6a3b2a67d2950e2c1c5267bb7c65d5594924caec
Signed-off-by: Stone Li <stone.li@bambulab.com>
(cherry picked from commit 176e505bcf5f48971302d9aff14e74b118eeafbe)

--- a/resources/config.json
+++ b/resources/config.json
@@ -24,6 +24,7 @@
             "bed_temperature_limit": 100,
             "model_id": "C11",
             "printer_type": "C11",
+            "ftp_folder" : "sdcard/",
             "printer_thumbnail_image": "printer_thumbnail_p1p"
         },
         {
