--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -118,8 +118,8 @@ endif (MINGW)
 
 if (NOT WIN32 AND NOT APPLE)
     # Binary name on unix like systems (Linux, Unix)
-    set_target_properties(BambuStudio PROPERTIES OUTPUT_NAME "bambu-studio")
-    set(SLIC3R_APP_CMD "bambu-studio")
+    set_target_properties(BambuStudio PROPERTIES OUTPUT_NAME "orca-slicer")
+    set(SLIC3R_APP_CMD "orca-slicer")
     configure_file(${CMAKE_CURRENT_SOURCE_DIR}/platform/unix/BuildLinuxImage.sh.in ${CMAKE_CURRENT_BINARY_DIR}/BuildLinuxImage.sh @ONLY)
 endif ()
 
@@ -172,7 +172,7 @@ if (WIN32)
     endif()
     target_compile_definitions(BambuStudio_app_gui PRIVATE -DSLIC3R_WRAPPER_NOCONSOLE)
     add_dependencies(BambuStudio_app_gui BambuStudio)
-    set_target_properties(BambuStudio_app_gui PROPERTIES OUTPUT_NAME "bambu-studio")
+    set_target_properties(BambuStudio_app_gui PROPERTIES OUTPUT_NAME "orca-slicer")
     target_link_libraries(BambuStudio_app_gui PRIVATE boost_headeronly)
 endif ()
 
@@ -220,7 +220,7 @@ else ()
     if (APPLE AND NOT CMAKE_MACOSX_BUNDLE)
         # On OSX, the name of the binary matches the name of the Application.
         add_custom_command(TARGET BambuStudio POST_BUILD
-            COMMAND ln -sf BambuStudio bambu-studio
+            COMMAND ln -sf BambuStudio orca-slicer
             WORKING_DIRECTORY "$<TARGET_FILE_DIR:BambuStudio>"
             VERBATIM)
     else ()
