--- a/src/platform/unix/BambuStudio.desktop
+++ b/src/platform/unix/BambuStudio.desktop
@@ -2,11 +2,11 @@
 Name=BambuStudio
 GenericName=3D Printing Software
 Icon=BambuStudio
-Exec=bambu-studio %F
+Exec=orca-slicer %F
 Terminal=false
 Type=Application
 MimeType=model/stl;application/vnd.ms-3mfdocument;application/prs.wavefront-obj;application/x-amf;
 Categories=Graphics;3DGraphics;Engineering;
 Keywords=3D;Printing;Slicer;slice;3D;printer;convert;gcode;stl;obj;amf;SLA
 StartupNotify=false
-StartupWMClass=bambu-studio
+StartupWMClass=orca-slicer
