--- a/.github/workflows/build_mac_x64.yml
+++ b/.github/workflows/build_mac_x64.yml
@@ -51,5 +51,5 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: BambuStudio-SoftFever_Mac
-          path: ${{ github.workspace }}/build/BambuStudio-SoftFever/BambuStudio-SoftFever*.zip
+          name: OrcaSlicer_Mac
+          path: ${{ github.workspace }}/build/OrcaSlicer/OrcaSlicer*.zip
