--- a/.github/workflows/build_win.yml
+++ b/.github/workflows/build_win.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           choco install strawberryperl
       - run: mkdir ${{ github.workspace }}/deps/build
-      - run: mkdir ${{ github.workspace }}/deps/build/BambuStudio_dep
+      - run: mkdir ${{ github.workspace }}/deps/build/OrcaSlicer_dep
       - name: download deps
         shell: powershell
         run: '(new-object System.Net.WebClient).DownloadFile("https://github.com/SoftFever/FileSharing/releases/download/3/BambuStudio_dep_9Mar2023.zip", "$env:temp\BambuStudio_dep_9Mar2023.zip")'
@@ -27,7 +27,7 @@ jobs:
         shell: cmd
         run: '"C:/Program Files/7-Zip/7z.exe" x %temp%\BambuStudio_dep_9Mar2023.zip'
 
-      - run: dir "${{ github.workspace }}\deps\build\BambuStudio_dep"
+      - run: dir "${{ github.workspace }}\deps\build\OrcaSlicer_dep"
       
       # - name: build deps
       #   id: cache_deps
@@ -35,7 +35,7 @@ jobs:
       #   env:
       #     cache-name: ${{ runner.os }}-cache-bambustudio_deps
       #   with:
-      #     path: ${{ github.workspace }}/deps/build/BambuStudio_dep
+      #     path: ${{ github.workspace }}/deps/build/OrcaSlicer_dep
       #     key: ${{ runner.os }}-build-${{ env.cache-name }}
 
       # - if: ${{ steps.cache_deps.outputs.cache-hit != 'true' }}
@@ -44,7 +44,7 @@ jobs:
       #   continue-on-error: true
       #   run: .\build_release.bat deps
    
-      # - run:  Get-ChildItem ${{ github.workspace }}/deps/build/ -Exclude BambuStudio_dep | Remove-Item -Recurse -Force
+      # - run:  Get-ChildItem ${{ github.workspace }}/deps/build/ -Exclude OrcaSlicer_dep | Remove-Item -Recurse -Force
 
       - name: Build studio
         working-directory: ${{ github.workspace }}
